# hydronTwin

./: Cargo.toml  README.md  config.toml  index.html  istruzioni_config.md  screenshot.ps1  simulation_export.csv
.agents/rules/: AGENTS.md
.github/workflows/: deploy.yml
src/: main.rs
