[package]
name = "hydron"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
rfd = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"

